updated frontend for new FacilitySemiProduct scheme
